--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<p><a href="antarktida/svetaine.html">Pirmas puslapis</a></p>
+<p><a href="svet/antarktida/svetaine.html">Pirmas puslapis</a></p>
 <p>Antras puslapis</p>
 <p>Trečias puslapis</p>
 
