--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <p><a href="svet/antarktida/svetaine.html">Pirmas puslapis</a></p>
-<p>Antras puslapis</p>
+ <p><a href="2/recep1.html">Antras puslapis</a></p>
 <p>Trečias puslapis</p>
 
 </body>
