--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
-
+<div class="pagrindinis">
 <p><a href="svet/antarktida/svetaine.html">Pirmas puslapis</a></p>
- <p><a href="2/recep1.html">Antras puslapis</a></p>
+<p><a href="2/recep1.html">Antras puslapis</a></p>
 <p>Trečias puslapis</p>
+ </div>
 
 </body>
 </html> 
