--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="pagrindinis">
 <p><a href="svet/antarktida/svetaine.html">Pirmas puslapis</a></p>
 <p><a href="2/recep1.html">Antras puslapis</a></p>
-<p>Trečias puslapis</p>
+ <p><a href="pagrindinis.html">Trečias puslapis</a></p>
  </div>
 
 </body>
